Rename 'maps-server' -> 'support-server', fix build issues, introduce 'Makefile'